import java.util.List;

public interface InteresadosAlClima {
  void notificar(List<AlertaClimatica> alertasClimaticas);
}
