public interface MailSender {
  void send(String adress, String message);
}
