public interface NotificationService {
  void notify(String text);
}
